# polytomic-python

./: .fernignore  README.md  __init__.py  client.py  environment.py  pyproject.toml  reference.md
.fern/: metadata.json
.github/workflows/: ci.yml
core/: client_wrapper.py
errors/: __init__.py
resources/: __init__.py
resources/bulk_sync/: client.py
resources/connections/: client.py
resources/events/: client.py
tests/: test_aiohttp_autodetect.py
types/: __init__.py  bulk_schedule.py  schema_association.py  v_2_activate_sync_envelope.py  v_2_activate_sync_input.py  v_2_api_key_response.py  v_2_bulk_sync_dest.py  v_2_bulk_sync_dest_envelope.py  v_2_connection_meta.py  v_2_connection_response_envelope.py  v_2_connection_response_schema.py  v_2_connection_type_response_envelope.py  v_2_dest_meta.py  v_2_event_types_envelope.py  v_2_execution_counts.py  v_2_get_connection_meta_envelope.py  v_2_get_identity_response_schema.py  v_2_identity_function.py  v_2_list_execution_response_envelope.py  v_2_list_sync_response_envelope.py  v_2_list_users_envelope.py  v_2_mode.py  v_2_model_field_request.py  v_2_model_field_response.py  v_2_model_list_response_envelope.py  v_2_model_response.py  v_2_model_response_envelope.py  v_2_organization.py  v_2_organization_envelope.py  v_2_organizations_envelope.py  v_2_policy_response_envelope.py  v_2_relation.py  v_2_relation_to.py  v_2_role_list_response_envelope.py  v_2_role_response.py  v_2_role_response_envelope.py  v_2_run_after.py  v_2_schedule.py  v_2_start_sync_response_envelope.py  v_2_start_sync_response_schema.py  (+19 more)
(+671 files in other folders)
